<resources>
    <string name="app_name">Meine Liste</string>
    <string name="share">Teilen</string>
    <string name="review">Bewerten</string>
    <string name="search">Suchen</string>
    <string name="edit">Editieren</string>
    <string name="add">Hinzufügen</string>
    <string name="delete">Löschen</string>
    <string name="option">Optionen</string>
    <string name="statistic">Statistik</string>
    <string name="import_list">Importieren</string>
    <string name="weather">Wetter</string>
    <string name="my_lists">Meine Listen</string>
    <string name="export">Export</string>
    <string name="insert_game">Spiel hinzufügen</string>
    <string name="open_galery">Bild aus Galerie hinzufügen</string>
    <string name="icon_link">https://icons8.com/icons/set/sort--white</string>
    <string name="mark_for_delete">Zum Löschen auswählen</string>
    <string name="save">Speichern</string>
    <string name="delete_list">Liste löschen</string>
    <string name="game_price">Preis:</string>
    <string name="game_review">Sterne:</string>
    <string name="game_name">Spielname:</string>
</resources>
