<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Info-Bilder:
    Suchen = @drawable/ic_search_white_48dp
    Editieren = @drawable/ic_mode_edit_white_48dp
    Hinzufügen = @drawable/ic_add_black_48dp
    Löschen = @drawable/ic_delete_black_48dp
    Einstellen = @drawable/ic_settings_white_48dp
    Sortieren = @drawable/icon_sort_white
    Link:
    SortIcon: @strings/icon_link
    -->

    <item
        android:id="@+id/MY_LISTS"
        android:icon="@android:drawable/arrow_down_float"
        android:title="@string/my_lists"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/item1" android:title="Placeholder"></item>
        </menu>
    </item>

    <item
        android:id="@+id/EDIT"
        android:icon="@drawable/ic_mode_edit_white_48dp"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/SORT_LETTER"
        android:icon="@drawable/icon_sort_letter_white"
        app:showAsAction="always"
        android:title="Sort Letter" />

    <item
        android:id="@+id/SORT_NUMBER"
        android:icon="@drawable/icon_sort_number_white"
        app:showAsAction="always"
        android:title="Sort Number" />

    <item
        android:id="@+id/INSERT_GAME"
        android:title="@string/insert_game"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_white_48dp"/>

</menu>