<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/UPDATED_LIST_NAME"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_for_delete"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:id="@+id/MARK_FOR_DELETE"
            ></TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>
                <LinearLayout android:id="@+id/table_for_checkbox"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    xmlns:android="http://schemas.android.com/apk/res/android">

                </LinearLayout>
            </TableRow>

            <TableRow>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/delete_list"
                    android:textColor="@color/black"
                    android:id="@+id/BUTTON_DELETE"></Button>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:layout_margin="10dp"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:id="@+id/BUTTON_SAVE"></Button>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
